# finch

./: .gitignore  CMakeLists.txt  build.sh  finch.gyp
src/: IErrorReporter.h  IInterpreterHost.h  Interpreter.cpp  Interpreter.h  ReplLineReader.cpp  ReplLineReader.h  StandaloneInterpreterHost.cpp  StandaloneInterpreterHost.h  main.cpp
src/Base/: Array.h  Dictionary.h  FinchString.cpp  FinchString.h  Macros.h  Queue.h  Ref.h  Stack.h  StringTable.cpp  StringTable.h
src/Compiler/: Block.cpp  Block.h  Compiler.cpp  Compiler.h
src/Interpreter/: ArgReader.h  Fiber.cpp  Fiber.h  FileLineReader.cpp  FileLineReader.h  Primitives.cpp  Primitives.h  Upvalue.cpp  Upvalue.h
src/Interpreter/Objects/: ArrayObject.h  BlockObject.cpp  BlockObject.h  DynamicObject.cpp  DynamicObject.h  FiberObject.h  NumberObject.h  Object.cpp  Object.h  StringObject.h
src/Interpreter/Primitives/: ArrayPrimitives.cpp  ArrayPrimitives.h  BlockPrimitives.cpp  BlockPrimitives.h  FiberPrimitives.cpp  FiberPrimitives.h  IoPrimitives.cpp  IoPrimitives.h  NumberPrimitives.cpp  NumberPrimitives.h  ObjectPrimitives.cpp  ObjectPrimitives.h  StringPrimitives.cpp  StringPrimitives.h
src/Syntax/: FinchParser.cpp  FinchParser.h  ILineReader.h  ITokenSource.h  Lexer.cpp  Lexer.h  LineNormalizer.cpp  LineNormalizer.h  Parser.cpp  Parser.h  Token.cpp  Token.h
src/Syntax/AST/: ArrayExpr.h  BindExpr.h  BlockExpr.h  DefineExpr.h  Expr.cpp  Expr.h  IExprCompiler.h  MessageExpr.h  NameExpr.h  NumberExpr.h  ObjectExpr.h  ReturnExpr.h  SelfExpr.h  SequenceExpr.h  SetExpr.h  StringExpr.h  UndefineExpr.h  VarExpr.h
src/Test/: ArrayTests.cpp  ArrayTests.h  LexerTests.cpp  LexerTests.h  QueueTests.cpp  QueueTests.h  RefTests.cpp  RefTests.h  StackTests.cpp  StackTests.h  StringTests.cpp  StringTests.h  Test.cpp  Test.h  TestMain.cpp  TokenTests.cpp  TokenTests.h
